fix icon overflow and text

--- a/assets_src/scss/wpb_widgets.scss
+++ b/assets_src/scss/wpb_widgets.scss
@@ -5,6 +5,9 @@
   li {
     display: inline-block;
     a {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
       i {
         margin-right: 5px;
       }
